--- a/src/main/webapp/WEB-INF/templates/user/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/user/fragments.html
@@ -71,11 +71,11 @@
             <div class="main_nav__logo"><a href="#"><img  th:src="@{user/assets/images/logo.png}" alt="logo"> TIỆC CƯỚI </a></div>
             <div class="main_nav__menu">
                 <ul class="main_nav__list">
-                    <li class="main_nav__item"><a href="index.html">TRANG CHỦ</a></li>
-                    <li class="main_nav__item"><a href="about.html">GIỚI THIỆU</a></li>
-                    <li class="main_nav__item"><a href="offers.html">ƯU ĐÃI</a></li>
-                    <li class="main_nav__item"><a href="blog.html">TIN TỨC</a></li>
-                    <li class="main_nav__item"><a href="contact.html">LIÊN HỆ</a></li>
+                    <li class="main_nav__item"><a href="/trang-chu">TRANG CHỦ</a></li>
+                    <li class="main_nav__item"><a href="/sanh-cuoi">SẢNH CƯỚI</a></li>
+                    <li class="main_nav__item"><a href="/dich-vu-va-uu-dai">ƯU ĐÃI VÀ DỊCH VỤ</a></li>
+                    <li class="main_nav__item"><a href="blog.html">MEMU THỨC ĂN</a></li>
+                    <li class="main_nav__item"><a href="/lien-he">LIÊN HỆ</a></li>
                 </ul>
             </div>
             <div class="main_nav__search">
