--- a/src/main/webapp/WEB-INF/templates/user/home.html
+++ b/src/main/webapp/WEB-INF/templates/user/home.html
@@ -16,15 +16,15 @@
     <div th:replace="user/fragments :: main_slide" class="main__slide">
 
     </div>
-    <div th:replace="user/fragments :: main_search" class="main_search">
+   <!-- <div th:replace="user/fragments :: main_search" class="main_search">
 
-    </div>
+    </div>-->
 
     <!--        Intro-->
     <div class="main_intro">
-      <h2>Những tour du lịch tốt nhất</h2>
-      <p>Đây là những tour du lịch tốt nhất hiện nay của chúng tôi.</p>
-      <p>Sẽ làm bạn hài lòng khi đăng ký những tour dưới đây.</p>
+      <h2>NHỮNG SẢNH CƯỚI TỐT NHẤT </h2>
+      <p>Đây là những sảnh cưới  tốt nhất hiện nay của chúng tôi.</p>
+      <p>Sẽ làm bạn hài lòng khi đăng ký những sảnh cưới  dưới đây.</p>
       <div class="main_intro__items">
         <div class="intro_item">
           <div class="intro_item__backgroud" style="background-image: url(user/assets/images/intro_1.jpg)"></div>
@@ -94,7 +94,7 @@
         <div class="slider" id="single_item">
           <div>
             <div class="cta_item">
-              <div class="cta_item__title">Gói tour Đà Nẵng san trọng</div>
+              <div class="cta_item__title">Gói DỊCH VỤ TRỌN BỘ SẢNH CƯỚI CÙNG MENU 8 MÓN</div>
               <div class="cta_item__text">Tour du lịch Đà Nẵng 4 ngày 3 đêm đưa du khách đến với một thành
                 phố thuộc vùng Nam Trung Bộ, Việt Nam. Đây là trung tâm kinh tế, văn hoá, giáo dục, khoa
                 học và công nghệ lớn của khu vực miền Trung - Tây Nguyên. Đà Nẵng hiện là một trong 13
@@ -111,7 +111,7 @@
           </div>
           <div>
             <div class="cta_item">
-              <div class="cta_item__title">Gói tour Đà Nẵng san trọng</div>
+              <div class="cta_item__title">Gói DỊCH VỤ TRỌN BỘ SẢNH CƯỚI CÙNG MENU 9 MÓN VÀ KHUYẾN MÃI MÓN TRÁNG MIỆNG</div>
               <div class="cta_item__text">Tour du lịch Đà Nẵng 4 ngày 3 đêm đưa du khách đến với một thành
                 phố thuộc vùng Nam Trung Bộ, Việt Nam. Đây là trung tâm kinh tế, văn hoá, giáo dục, khoa
                 học và công nghệ lớn của khu vực miền Trung - Tây Nguyên. Đà Nẵng hiện là một trong 13
@@ -133,7 +133,7 @@
     <!--        Offers-->
     <div class="main_offers">
       <div class="box main_offers__box">
-        <h2 class="offers_title">Các ưu đãi tối nhất</h2>
+        <h2 class="offers_title">CÁC DỊCH VỤ CỦA NHÀ HÀNG HỖ TRỢ</h2>
         <div class="offers_items">
           <div class="offers_item">
             <div class="offers_image">
@@ -257,7 +257,7 @@
     <!--        testmonials-->
     <div class="main_testimonials">
       <div class="box main_testimonials__box">
-        <h2>Khách hàng nói gì về chúng tôi?</h2>
+        <h2>CÁC MENU THỨC ĂN</h2>
         <div id="testimonials" data-slick='{"slidesToShow": 3, "slidesToScroll": 1}'>
           <div>
             <div class="test_item">
@@ -265,7 +265,7 @@
                 <div class="test_image"><img src="user/assets/images/test_1.jpg" alt="">
                 </div>
                 <div class="test_icon"><img src="user/assets/images/island_t.png" alt=""></div>
-                <div class="test_content_container">
+                <!--<div class="test_content_container">
                   <div class="test_content">
                     <div class="test_item_info">
                       <div class="test_name">Trường Giang</div>
@@ -275,7 +275,7 @@
                     <p class="test_quote_text">Các thắng cảnh thật đẹp, khiến tôi không thể quên
                       được. Tôi rất hài lòng về dịch cụ của ViVuViet.</p>
                   </div>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
@@ -285,17 +285,17 @@
                 <div class="test_image"><img src="user/assets/images/test.jpg" alt="">
                 </div>
                 <div class="test_icon"><img src="user/assets/images/island_t.png" alt=""></div>
-                <div class="test_content_container">
-                  <div class="test_content">
-                    <div class="test_item_info">
-                      <div class="test_name">Hoàng Yến Chibi</div>
-                      <div class="test_date">12-04-2019</div>
-                    </div>
-                    <div class="test_quote_title">" Kỳ nghỉ thật tuyệt !!! "</div>
-                    <p class="test_quote_text">Các thắng cảnh thật đẹp, khiến tôi không thể quên
-                      được. Tôi rất hài lòng về dịch cụ của ViVuViet.</p>
-                  </div>
-                </div>
+<!--                <div class="test_content_container">-->
+<!--                  <div class="test_content">-->
+<!--                    <div class="test_item_info">-->
+<!--                      <div class="test_name">Hoàng Yến Chibi</div>-->
+<!--                      <div class="test_date">12-04-2019</div>-->
+<!--                    </div>-->
+<!--                    <div class="test_quote_title">" Kỳ nghỉ thật tuyệt !!! "</div>-->
+<!--                    <p class="test_quote_text">Các thắng cảnh thật đẹp, khiến tôi không thể quên-->
+<!--                      được. Tôi rất hài lòng về dịch cụ của ViVuViet.</p>-->
+<!--                  </div>-->
+<!--                </div>-->
               </div>
             </div>
           </div>
@@ -305,7 +305,7 @@
                 <div class="test_image"><img src="user/assets/images/test_3.jpg" alt="">
                 </div>
                 <div class="test_icon"><img src="user/assets/images/island_t.png" alt=""></div>
-                <div class="test_content_container">
+               <!-- <div class="test_content_container">
                   <div class="test_content">
                     <div class="test_item_info">
                       <div class="test_name">Trấn Thành</div>
@@ -315,7 +315,7 @@
                     <p class="test_quote_text">Các thắng cảnh thật đẹp, khiến tôi không thể quên
                       được. Tôi rất hài lòng về dịch cụ của ViVuViet.</p>
                   </div>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
