--- a/src/main/webapp/WEB-INF/templates/user/weddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/weddinghall.html
@@ -11,19 +11,20 @@
   </header>
   <div class="main">
     <div class="main__slide_offers">
-      <div class="home_slide__item">
-        <div class="home_slide__background"
-             style="background-image: url(styles/images/offers_slide.jpg)"></div>
+      <div class="">
+        <img height="600px" width="1700px"  src="http://thamlotsan.net.vn/uploads/images/tin-tuc/tham-trai-san-cho-nha-hang-tiec-cuoi/tham-trai-san-tiec-cuoi-su-lua-chon-hoan-hao-cho-cac-nha-hang-lon-02.jpg">
+        <!--<div class="home_slide__background"
+             style="background-image: url(styles/images/offers_slide.jpg)"></div>-->
         <div class="home__content">
-          <div class="home__title animated bounceInLeft">
-            ưu đãi
+          <div style="color: #31124b" class="home__title animated bounceInLeft">
+            SẢNH CƯỚI
           </div>
         </div>
       </div>
     </div>
     <!--        Intro-->
 
-    <div class="offers">
+    <div class="offers" style="margin-top: 50px">
       <div class="box offers__box1">
         <div class="offers_sorting_container">
           <ul class="offers_sorting">
