--- a/src/main/webapp/WEB-INF/templates/user/service.html
+++ b/src/main/webapp/WEB-INF/templates/user/service.html
@@ -11,18 +11,17 @@
   </header>
   <div class="main">
     <div class="main__slide_offers">
-      <div class="home_slide__item">
-        <div class="home_slide__background"
-             style="background-image: url(styles/images/offers_slide.jpg)"></div>
+      <div class="">
+        <img height="600px" width="1700px"  src="https://menu24h.vn/image/5e785963b566c3ea9b1e9ebc/original.jpg">
         <div class="home__content">
-          <div class="home__title animated bounceInDown">
-            CÁC GOI DỊCH VỤ ƯU ĐÃI
+          <div style="color: #31124b" class="home__title animated bounceInDown">
+            DỊCH VỤ ƯU ĐÃI
           </div>
         </div>
       </div>
     </div>
     <!--        blog-->
-    <div class="blog">
+    <div class="blog" style="margin-top: 70px">
       <div class="box blog__box">
         <div class="blog__list">
           <div class="blog_post">
