--- a/src/main/webapp/WEB-INF/templates/user/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/user/fragments.html
@@ -89,12 +89,12 @@
                     <li class="main_nav__item"><a href="/trang-chu">TRANG CHỦ</a></li>
                     <li class="main_nav__item"><a href="/sanh-cuoi">SẢNH CƯỚI</a></li>
                     <li class="main_nav__item"><a href="/dich-vu-va-uu-dai">ƯU ĐÃI VÀ DỊCH VỤ</a></li>
-                    <li class="main_nav__item"><a href="blog.html">MEMU THỨC ĂN</a></li>
+                    <li class="main_nav__item"><a href="danh-sach-menu-thuc-an">MEMU THỨC ĂN</a></li>
                     <li class="main_nav__item"><a href="/lien-he">LIÊN HỆ</a></li>
                 </ul>
             </div>
             <div class="main_nav__search">
-                <form action=""><input class="input_search" type="text"></form>
+                <form action="/tim-kiem" method="get"><input name="keysearch" class="input_search" type="text"></form>
                 <div class="search__item"><i class="fas fa-search"></i></div>
             </div>
         </div>
