--- a/src/main/webapp/WEB-INF/templates/user/contact.html
+++ b/src/main/webapp/WEB-INF/templates/user/contact.html
@@ -11,11 +11,10 @@
   </header>
   <div class="main">
     <div class="main__slide_offers">
-      <div class="home_slide__item">
-        <div class="home_slide__background"
-             style="background-image: url(styles/images/offers_slide.jpg)"></div>
+      <div class="">
+        <img height="600px" width="1700px"  src="https://menu24h.vn/image/5e785963b566c3ea9b1e9ebc/original.jpg">
         <div class="home__content">
-          <div class="home__title animated bounceInDown">
+          <div style="color: #31124b" class="home__title animated bounceInDown">
             Liên hệ
           </div>
         </div>
