--- a/src/main/webapp/WEB-INF/templates/user/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/user/fragments.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="vi">
 <head th:fragment="html_head">
     <meta charset="UTF-8">
     <title>ViVuViet</title>
@@ -14,6 +14,11 @@
     <script th:src="@{/user/assets/js/main_js.js}"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>-->
     <script>
         $("#single_item").slick({
             dots: true
@@ -88,7 +93,7 @@
                 <ul class="main_nav__list">
                     <li class="main_nav__item"><a href="/trang-chu">TRANG CHỦ</a></li>
                     <li class="main_nav__item"><a href="/sanh-cuoi">SẢNH CƯỚI</a></li>
-                    <li class="main_nav__item"><a href="/dich-vu-va-uu-dai">ƯU ĐÃI VÀ DỊCH VỤ</a></li>
+                    <li class="main_nav__item"><a href="/dich-vu-va-uu-dai">DỊCH VỤ</a></li>
                     <li class="main_nav__item"><a href="danh-sach-menu-thuc-an">MEMU THỨC ĂN</a></li>
                     <li class="main_nav__item"><a href="/lien-he">LIÊN HỆ</a></li>
                 </ul>
@@ -805,7 +810,7 @@
             <div class="footer__about">
                 <div class="footer__logo">
                     <div class="logo">
-                        <a href="#"><img src="styles/images/logo.png" alt="">VIVUVIET</a>
+                        <a href="#"><img src="styles/images/logo.png" alt="">TIỆC CƯỚI</a>
                     </div>
                 </div>
                 <p class="footer_about__text">
