--- a/src/main/webapp/WEB-INF/templates/user/weddinghall.html
+++ b/src/main/webapp/WEB-INF/templates/user/weddinghall.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="user/fragments :: html_head">
-
+<html lang="vi" xmlns:th="http://www.thymeleaf.org">
+<head >
+  <meta charset="UTF-8">
+  <title>ViVuViet</title>
+  <link rel="stylesheet" type="text/css" th:href="@{/user/assets/css/main_style.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/user/assets/css/Animation.css}">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css"/>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick.min.js"></script>
+  <script th:src="@{/user/assets/js/main_js.js}"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 </head>
 <body>
 <div id="wrapper">
@@ -27,54 +44,10 @@
     <div class="offers" style="margin-top: 50px">
       <div class="box offers__box1">
         <div class="offers_sorting_container">
-          <ul class="offers_sorting">
-            <li id="offer_1">
-              <span class="sorting_text">Giá</span>
-              <i class="fas fa-angle-down"></i>
-              <ul id="offer_box_1" class="animated fadeInUp">
-                <li class="sort_btn"><span>Hiện tất cả</span></li>
-                <li class="sort_btn"><span>Tăng dần</span></li>
-                <li class="sort_btn"><span>Giảm dần</span></li>
-              </ul>
-            </li>
-            <li id="offer_2">
-              <span class="sorting_text">Thứ tự</span>
-              <i class="fas fa-angle-down"></i>
-              <ul id="offer_box_2">
-                <li class="sort_btn"><span>Mặc định</span></li>
-                <li class="sort_btn"><span>Bảng chữ cái</span></li>
-              </ul>
-            </li>
-            <li id="offer_3">
-              <span class="sorting_text">Sao</span>
-              <i class="fas fa-angle-down"></i>
-              <ul id="offer_box_3">
-                <li class="filter_btn" data-filter="*"><span>Hiện tất cả</span></li>
-                <li class="sort_btn"><span>Giảm dần</span></li>
-                <li class="filter_btn" data-filter=".rating_3"><span>3</span></li>
-                <li class="filter_btn" data-filter=".rating_4"><span>4</span></li>
-                <li class="filter_btn" data-filter=".rating_5"><span>5</span></li>
-              </ul>
-            </li>
-            <li id="offer_4">
-              <span class="sorting_text">Khoảng cách</span>
-              <i class="fas fa-angle-down"></i>
-              <ul id="offer_box_4">
-                <li class="num_sorting_btn"><span>50Km</span></li>
-                <li class="num_sorting_btn"><span>100Km</span></li>
-                <li class="num_sorting_btn"><span>200Km</span></li>
-              </ul>
-            </li>
-            <li id="offer_5">
-              <span class="sorting_text">Đánh giá</span>
-              <i class="fas fa-angle-down"></i>
-              <ul id="offer_box_5">
-                <li class="num_sorting_btn"><span>Very Good</span></li>
-                <li class="num_sorting_btn"><span>Good</span></li>
-                <li class="num_sorting_btn"><span>Medium</span></li>
-              </ul>
-            </li>
-          </ul>
+
+
+          <!-- The Modal -->
+
         </div>
       </div>
       <div class="box offers__box2">
@@ -85,10 +58,10 @@
                 <!-- Image by https://unsplash.com/@kensuarez -->
                 <div class="offers_image_background"
                      ><img height="300px" width="400px" th:src="@{'/user/assets/images/'+${weddinghall.image}}"></div>
-                <div class="offers_name"><a href="#" th:text="${weddinghall.name}" ></a></div>
+                <div class="offers_name"><a th:href="@{/chi-tiet-sanh-cuoi(id=${weddinghall.id})}" th:text="${weddinghall.name}" ></a></div>
               </div>
               <div class="offers_content">
-                <div class="offers_price" th:text="${weddinghall.name}"></div>
+                <div class="offers_price" th:text="${weddinghall.cost}+' VNĐ '"></div>
                 <div class="rating rating_4 offers_rating" data-rating="4">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -105,21 +78,98 @@
                     <li class="offers_icons_item"><img src="styles/images/sailboat.png" alt=""></li>
                   </ul>
                 </div>
-                <div class="button book_button"><a href="#">book<span></span><span></span><span></span></a>
+                <div class="button book_button"><a data-toggle="modal"  th:data-target="'#myModal' + ${weddinghall.id}" href="#">book<span></span><span></span><span></span></a>
                 </div>
                 <div class="offer_reviews">
                   <div class="offer_reviews_content">
                     <div class="offer_reviews_title">very good</div>
-                    <div class="offer_reviews_subtitle">100 lượt xem</div>
+                    <div class="offer_reviews_subtitle" th:text="${weddinghall.view}+ ' lượt xems'"></div>
                   </div>
                   <div class="offer_reviews_rating" style="text-align: center">8.0</div>
                 </div>
               </div>
             </div>
+            <div class="modal " th:id="'myModal' + ${weddinghall.id}" >
+              <div class="modal-dialog modal-lg" >
+                <div class="modal-content">
+                  <!-- Modal Header -->
+                  <div class="modal-header">
+                    <h3 class="modal-title"  th:text="${weddinghall.name} +' giá '+ ${weddinghall.cost}"></h3>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  </div>
+                  <!-- Modal body -->
+                  <div class="modal-body" >
+                   <!-- <input th:id="'weddinghall' + ${weddinghall.id}" th:value="${${weddinghall.id}}">-->
+                    <form action="" method="post">
+                    <div class="form-group">
+                      <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn ngày tổ chức:</label>
+                      <input th:onchange="'onChangeDate(' +${weddinghall.id}+ ')'" style="height: 40px;font-size: 15px" th:id="'dateHeld' + ${weddinghall.id}" required class="form-control" type="date" placeholder="Ngày tổ chức">
+                    </div>
+                    <div class="form-group">
+                      <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn ca:</label>
+                      <select th:onchange="'onChangeShift(' +${weddinghall.id}+ ')'" disabled  style="height: 40px;font-size: 15px" th:id="'shift' + ${weddinghall.id}"  class="form-control">
+                        <option style="font-size: 15px"  value="0"  selected>Chọn ca</option>
+                        <th:block th:each="shift :${listS}">
+                          <option style="font-size: 15px"  th:value="${shift.id}" th:text="${shift.name} +' (trả thêm '+ ${shift.cost}+')' "></option>
+                        </th:block>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn menu:</label>
+                      <select disabled style="height: 40px;font-size: 15px" th:onchange="'sumCost(' +${weddinghall.id}+ ')'" th:id="'menu' + ${weddinghall.id}"   class="form-control">
+                        <option style="font-size: 15px"   value="0" selected>Chọn menu</option>
+                        <th:block th:each="menu:${listM}">
+                          <option style="font-size: 15px"  th:value="${menu.id}"  th:text="${menu.name}+' giá ' + ${menu.cost}"></option>
+                        </th:block>
+                      </select>
+                    </div>
+                    <div class="form-group">
+                      <label style="font-size: 15px" th:for="exampleInputEmail1">Chọn dịch vụ:</label>
+                      <select disabled style="height: 100px;font-size: 12px" multiple="multiple" th:onchange="'sumCost(' +${weddinghall.id}+ ')'" th:id="'service' + ${weddinghall.id}"   class="form-control">
+                        <option style="font-size: 15px"   value="0" selected>Chọn dịch vụ</option>
+                        <th:block th:each="service:${listService}">
+                          <option style="font-size: 15px"  th:value="${service.id}"  th:text="${service.name}+' giá ' + ${service.cost}"></option>
+                        </th:block>
+                      </select>
+                    </div>
+                    <div class="form-group" style="text-align: right">
+                      <label th:for="exampleInputEmail1" style="font-weight: bold;font-size: 15px">Tổng tiền: <p style="color: red" th:id="'sum' +${weddinghall.id} "></p></label>
+                    </div>
+                      <div class="form-group" >
+                        <label th:for="exampleInputEmail1" style="font-weight: bold"><p style="color: red" th:id="'mess' +${weddinghall.id} "></p></label>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" style="width: 100px ; height: 30px ; border-radius: 20px; background-color: #350a4e;border-color: #bacbe6" data-dismiss="modal">Đóng</button>
+                        <button type="button" th:onclick="'booking(' +${weddinghall.id}+ ')'" class="btn btn-danger" style="width: 100px ; height: 30px ; border-radius: 20px; background-color: #350a4e;border-color: #bacbe6" >Đặt</button>
+                      </div>
+                    </form>
+                  </div>
+                  <!-- Modal footer -->
+
+                </div>
+              </div>
+            </div>
           </th:block>
+          <div class="modal fade" id="aa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Hóa đơn</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div id="result" class="modal-body">
+
+                </div>
+                <div class="modal-footer">
+                  <button  onclick="closeModel()" type="button" class="btn btn-danger" >OK</button>
+
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="blog_navigation">
             <ul>
-              <li class="blog_dot active" ><a th:href="@{/sanh-cuoi(page=0)}"> First</a></li>
+              <li th:if="${numberPage>0}" class="blog_dot active" ><a th:href="@{/sanh-cuoi(page=0)}"> First</a></li>
               <li th:if="${numberPage>0}" class="blog_dot active" style="margin-left: 10px" ><a th:href="@{/sanh-cuoi(page = ${list.number - 1})}">Previous</a> </li>
               <li th:if="${numberPage<list.totalPages - 1}" class="blog_dot active"  style="margin-left: 10px" ><a th:href="@{/sanh-cuoi(page = ${list.number + 1})}">Next</a> </li>
               <li class="blog_dot active" style="margin-left: 10px" > <a th:href="@{/sanh-cuoi(page = ${list.totalPages - 1})}">Last</a></li>
@@ -134,6 +184,89 @@
 
             </ul>
           </div>-->
+
+          <script>
+            function onChangeDate(id) {
+              var nameIDShift = "shift" + id;
+              document.getElementById(nameIDShift).disabled  = false;
+            }
+            function onChangeShift(id) {
+              var nameIDMenu = "menu" + id;
+              document.getElementById(nameIDMenu).disabled  = false;
+            }
+            function booking(id){
+              var nameIDShift = "shift" + id;
+              var nameIDMenu = "menu" + id;
+              var nameIDService = "#service" + id;
+              var nameSum = "sum" + id;
+              var namedateHeld = "dateHeld" + id;
+              var nameMes = "mess" + id;
+              var idShift = document.getElementById(nameIDShift).value;
+              var idMenu = document.getElementById(nameIDMenu).value;
+              var idService = $(nameIDService).val();
+              console.log(idService)
+              var dateHeld = document.getElementById(namedateHeld).value;
+              if (dateHeld == ""){
+                dateHeld = "0";
+              }
+              var total = document.getElementById(nameSum).value;
+              $.ajax({
+                url: "/booking",
+                type:"post",
+                data:{
+                  idShift:idShift,
+                  idMenuFood:idMenu,
+                  idService:JSON.stringify(idService),
+                  idWeddingHall: id,
+                  total:total,
+                  dateHeld:dateHeld
+                },
+                success: function(data){
+                  console.log(data);
+                  var row = document.getElementById(nameMes);
+                  var html = ""
+                  html+=data.message;
+
+                  row.innerHTML = html;
+                  $(document).ready(function(){
+                    $('#aa').modal('show');
+                  });
+                }
+              });
+
+            }
+            function sumCost(id){
+              var nameIDShift = "shift" + id;
+              var nameIDMenu = "menu" + id;
+              var nameIDService = "#service" + id;
+              var nameIDService1 = "service" + id;
+              var idShift = document.getElementById(nameIDShift).value;
+              var idMenu = document.getElementById(nameIDMenu).value;
+              var idService = $(nameIDService).val();
+              var nameSum = "sum" + id;
+              var nameSum1 = "#sum" + id;
+              document.getElementById(nameIDService1).disabled  = false;
+              $.ajax({
+                url: "/get-sum",
+                type:"get",
+                data:{
+                  idShift:idShift,
+                  idMenu:idMenu,
+                  idService:JSON.stringify(idService),
+                  idWeddingHall: id
+                },
+                success: function(data){
+                  console.log(data);
+                  var row = document.getElementById(nameSum);
+                  var html = ""
+                  html+=data + "VNĐ";
+                  $(nameSum1).val(data);
+                  row.innerHTML = html;
+                }
+              });
+
+            }
+          </script>
         </div>
       </div>
     </div>
