--- a/src/main/webapp/WEB-INF/templates/admin/index.html
+++ b/src/main/webapp/WEB-INF/templates/admin/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-
+      </div>
     </main>
     <footer th:replace="admin/fragments :: footer" class="py-4 bg-light mt-auto">
       <div class="container-fluid px-4">
