--- a/src/main/webapp/WEB-INF/templates/admin/fragments.html
+++ b/src/main/webapp/WEB-INF/templates/admin/fragments.html
@@ -20,6 +20,7 @@
     <script th:src="@{/admin1/assets/assets/demo/chart-bar-demo.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script th:src="@{/admin1/assets/js/datatables-simple-demo.js}"></script>
+    <script src="https://cdn.ckeditor.com/ckeditor5/29.0.0/classic/ckeditor.js"></script>
 </head>
 
 <body class="sb-nav-fixed">
@@ -59,49 +60,37 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Bảng điều khiển
                     </a>
-
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                       data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Quản lý Phim
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="theloai.html">Thể loại </a>
-                            <a class="nav-link" href="">Thông tin</a>
-                            <a class="nav-link" href="">Lịch chiếu</a>
-                            <a class="nav-link" href="">Suất chiếu</a>
-                            <a class="nav-link" href="">Phòng chiếu</a>
-                            <a class="nav-link" href="">Ghế ngồi</a>
-                        </nav>
-                    </div>
-                    <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                       aria-expanded="false" aria-controls="collapsePages">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Bài viết
-                        <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                    </a>
-                    <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
-                         data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="">Thể loại </a>
-                            <a class="nav-link" href="">Thông tin</a>
-                        </nav>
-                    </div>
-                    <a class="nav-link" href="nguoidung.html">
+                    <a class="nav-link" href="/admin/sanh-cuoi">
                         <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                        Người dùng
+                        Sảnh cưới
                     </a>
-
-                    <a class="nav-link" href="booking.html">
+                    <a class="nav-link" href="service.html">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Dịch vụ
+                    </a>
+                    <a class="nav-link" href="menufood.html">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Menu thức ăn
+                    </a>
+                    <a class="nav-link" href="contact.html">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Phản hồi
+                    </a>
+                    <a class="nav-link" href="shift.html">
+                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                        Ca tổ chức
+                    </a>
+                    <a class="nav-link" href="customer.html">
                         <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                        Booking
+                        Khách hàng
+                    </a>
+                    <a class="nav-link" href="employee.html">
+                        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                        Nhân viên
                     </a>
                     <a class="nav-link" href="charts.html">
                         <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                        Thống kê
+                        Tiệc cưới
                     </a>
 
                 </div>
